--- a/info.plist
+++ b/info.plist
@@ -22,6 +22,7 @@
 		<string>C08E7EB1-F1F1-40EC-8DC3-526577C5825D</string>
 		<string>C440A01A-D5A5-4FD8-9421-FE5FCCE26537</string>
 		<string>04BADF0A-B611-471A-B061-3C291C7A672A</string>
+		<string>248D72BB-1C6E-4D02-83BA-42DFFE7A4276</string>
 	</array>
 	<key>uuid</key>
 	<string>42F4B22A-0FDF-4BAE-9E5C-C1D34DF8D367</string>
