Adding non-indented versions

--- a/info.plist
+++ b/info.plist
@@ -8,8 +8,15 @@
 		<array>
 			<string>F8651C72-8178-4159-85DD-7AA5A815867D</string>
 			<string>C08E7EB1-F1F1-40EC-8DC3-526577C5825D</string>
+			<string>700CB19F-15A7-4453-8E61-558966B5B6C7</string>
 			<string>C440A01A-D5A5-4FD8-9421-FE5FCCE26537</string>
 			<string>04BADF0A-B611-471A-B061-3C291C7A672A</string>
+			<string>------------------------------------</string>
+			<string>00410939-AC91-41BD-8863-AF3E43FD851F</string>
+			<string>11CD2AA5-3C7D-4EC2-94AD-6E125C9A1335</string>
+			<string>7393A6BB-9C39-4586-BFF6-CF974D9793B6</string>
+			<string>9B6CE920-F647-47C0-AFAE-B1B87375EA1D</string>
+			<string>4146563A-0639-45B1-A3CF-4C4C9450DFFD</string>
 			<string>------------------------------------</string>
 			<string>248D72BB-1C6E-4D02-83BA-42DFFE7A4276</string>
 		</array>
@@ -21,10 +28,15 @@
 	<key>ordering</key>
 	<array>
 		<string>F8651C72-8178-4159-85DD-7AA5A815867D</string>
+		<string>00410939-AC91-41BD-8863-AF3E43FD851F</string>
 		<string>C08E7EB1-F1F1-40EC-8DC3-526577C5825D</string>
+		<string>11CD2AA5-3C7D-4EC2-94AD-6E125C9A1335</string>
 		<string>700CB19F-15A7-4453-8E61-558966B5B6C7</string>
+		<string>7393A6BB-9C39-4586-BFF6-CF974D9793B6</string>
 		<string>C440A01A-D5A5-4FD8-9421-FE5FCCE26537</string>
+		<string>9B6CE920-F647-47C0-AFAE-B1B87375EA1D</string>
 		<string>04BADF0A-B611-471A-B061-3C291C7A672A</string>
+		<string>4146563A-0639-45B1-A3CF-4C4C9450DFFD</string>
 		<string>248D72BB-1C6E-4D02-83BA-42DFFE7A4276</string>
 	</array>
 	<key>uuid</key>
